[gd_scene load_steps=8 format=2]

[ext_resource path="res://NPC/picture/Analexius.png" type="Texture" id=1]
[ext_resource path="res://intro/tres/talkAt.tscn" type="PackedScene" id=2]
[ext_resource path="res://intro/badges.tscn" type="PackedScene" id=3]
[ext_resource path="res://NPC/picture/interact-removebg-preview.png" type="Texture" id=4]
[ext_resource path="res://NPC/script/analexius.gd" type="Script" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.0
height = 0.0

[sub_resource type="CircleShape2D" id=2]
radius = 26.0768

[node name="analexius" type="KinematicBody2D"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -12 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 27, 198, 18, 27 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -6 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 64
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2( -1, -13 )
shape = SubResource( 2 )

[node name="TextureButton" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( -28, -43 )
scale = Vector2( 0.165625, 0.0888889 )
z_index = 2
normal = ExtResource( 4 )

[node name="talk_box" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -26 )

[node name="badges" parent="." instance=ExtResource( 3 )]

[connection signal="body_shape_entered" from="Area2D" to="." method="_on_Area2D_body_shape_entered"]
[connection signal="body_shape_exited" from="Area2D" to="." method="_on_Area2D_body_shape_exited"]
